filter out customers not accepting marketing changed table heading

--- a/views/products.ejs
+++ b/views/products.ejs
@@ -60,7 +60,7 @@
 				<thead>
 				<tr>
 					<th colspan="9">Name</th>
-					<th>Became a Customer</th>
+					<th>Updated Profile</th>
 					<th>Phone Number</th>
 					<th>Email</th>
 				</tr>
