--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
 						target: "new" 
 					},
 					{ 
-						label: "Message History", 
+						label: "Date Range History", 
 						callback: function() {
 							ShopifyApp.Modal.open({
 							  src: 'https://8665a278.ngrok.io/modal_content?var=history',
@@ -66,12 +66,12 @@
 	  <p style="background-color: #F0F0F0; padding: 15px;">
 		Usage
 		<ul>
-			<li>Select Date Range</li>
+			<li>Select Date Range (automatically filters customers not wishing to be marketed to)</li>
 			<li>Click Search</li>
 			<li>Click 'Message customers'</li>
-			<li>Fill out the input fields & send</li>
+			<li>Fill out the fields & send</li>
 		</ul>
-		To see the dates previously used, click history
+		<i>To see dates previously used, click Date Range History</i>
 		<br /><br />
 		<a class="button" href="/customers">Continue</a>
 	 </p>
