--- a/views/products.ejs
+++ b/views/products.ejs
@@ -80,7 +80,7 @@
         <a class="button smsBtn">Message customers</a>
 	  </div>
 	  <div class="small-3 columns">
-        <a class="button historyBtn">Search history</a>
+        <a class="button historyBtn">Date Range History</a>
       </div>
 	  </div>
 	  <script>
